finish handle CRUD for user account

--- a/admin-page/views/common/dialogs.ejs
+++ b/admin-page/views/common/dialogs.ejs
@@ -113,7 +113,8 @@
     </div>
 </div>
 
-<div id="dlgupdate" class="modal fade" role="dialog">
+<!-- ############################### USER ACCOUNT SECTION ###############################-->
+<div id="dlginsertuser" class="modal fade" role="dialog">
     <div class="modal-dialog" style="padding-top: 10%;">
 
         <!-- Modal content-->
@@ -121,55 +122,38 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Chỉnh Sửa/ Thêm Thông Tin Người Dùng</h4>
+                <h4 class="modal-title">Thêm Người Dùng Mới</h4>
             </div>
 
             <div class="modal-body">
-                <form action="#" method="POST">
+                <form action="#" method="POST" id="forminsertuser">
                     <div class="form-group">
-                        <label for="id" class="control-label">ID:</label>
-                        <input type="number" class="form-control" id="id" readonly required>
-                    </div>
-                    <div class="form-group">
-                        <label for="username" class="control-label">Tên Tài Khoản:</label>
-                        <input type="text" class="form-control" id="username">
+                        <label for="id" class="control-label">Tên Đăng Nhập:</label>
+                        <input type="text" class="form-control" id="username" name="username" required>
                     </div>
                     <div class="form-group">
                         <label for="fullname" class="control-label">Họ Và Tên:</label>
-                        <input type="text" class="form-control" id="fullname">
+                        <input type="text" class="form-control" id="fullName" name="fullName">
                     </div>
                     <div class="form-group">
-                        <label for="password" class="control-label">Mật Khẩu:</label>
-                        <input type="password" class="form-control" id="password">
-                    </div>
-                    <div class="form-group">
-                        <label for="retypepassword" class="control-label">Nhập Lại Mật Khẩu:</label>
-                        <input type="password" class="form-control" id="retypepassword">
-                    </div>
-                    <div class="form-group">
-                        <label for="idcardnumber" class="control-label">Số CMND:</label>
-                        <input type="number" class="form-control" id="idcardnumber">
-                    </div>
-                    <div class="form-group">
-                        <label for="phonenumber" class="control-label">Số Điện Thoại:</label>
-                        <input type="number" class="form-control" id="phonenumber">
+                        <label for="phoneNumber" class="control-label">Số Điện Thoại:</label>
+                        <input type="text" class="form-control" id="phoneNumber" name="phoneNumber">
                     </div>
                     <div class="form-group">
                         <label for="address" class="control-label">Địa Chỉ:</label>
-                        <input type="text" class="form-control" id="address">
+                        <input type="text" class="form-control" id="address" name="address">
                     </div>
                     <div class="form-group">
                         <label for="role" class="control-label">Cấp Độ:</label>
-                        <select id="role">
-                            <option value="0" selected>Quản Trị Viên</option>
-                            <option value="1" selected>Quản Lý</option>
-                            <option value="2" selected>Người Dùng</option>
+                        <select id="role" name="role">
+                            <option value="ADMIN" selected>Quản Trị Viên</option>
+                            <option value="MANAGER">Quản Lý</option>
+                            <option value="USER">Người Dùng</option>
                         </select>
 
                     </div>
 
-
-                    <button type="button" class="btn btn-info" data-dismiss="modal">Cập Nhật</button>
+                    <button type="submit" onclick="handleInsertUserAccount(); $('#forminsertuser').get(0).reset();  return false;" class="btn btn-info" data-dismiss="modal">Thêm</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
                 </form>
             </div>
@@ -177,6 +161,83 @@
         </div>
     </div>
 </div>
+
+<div id="dlgupdateuser" class="modal fade" role="dialog">
+    <div class="modal-dialog" style="padding-top: 10%;">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Chỉnh Sửa Thông Tin Người Dùng</h4>
+            </div>
+
+            <div class="modal-body">
+                <form action="#" method="POST" id="formupdateuser">
+                    <div class="form-group">
+                        <label for="id" class="control-label">Tên Đăng Nhập:</label>
+                        <input type="text" class="form-control" id="username" name="username" readonly required>
+                    </div>
+                    <div class="form-group">
+                        <label for="fullname" class="control-label">Họ Và Tên:</label>
+                        <input type="text" class="form-control" id="fullName" name="fullName">
+                    </div>
+                    <div class="form-group">
+                        <label for="phoneNumber" class="control-label">Số Điện Thoại:</label>
+                        <input type="text" class="form-control" id="phoneNumber" name="phoneNumber">
+                    </div>
+                    <div class="form-group">
+                        <label for="address" class="control-label">Địa Chỉ:</label>
+                        <input type="text" class="form-control" id="address" name="address">
+                    </div>
+                    <div class="form-group">
+                        <label for="role" class="control-label">Cấp Độ:</label>
+                        <select id="role" name="role">
+                            <option value="ADMIN">Quản Trị Viên</option>
+                            <option value="MANAGER">Quản Lý</option>
+                            <option value="USER">Người Dùng</option>
+                        </select>
+
+                    </div>
+
+                    <button type="submit" onclick="handleUpdateUserAccount(); return false;" class="btn btn-info" data-dismiss="modal">Thêm</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div id="dlgdeleteuser" class="modal fade" role="dialog">
+    <div class="modal-dialog" style="padding-top: 10%;">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Xóa Người Dùng</h4>
+            </div>
+
+            <div class="modal-body">
+                <form method="POST" action="#" id="formdeleteuser">
+                    <div class="form-group">
+                        <label for="boothname" class="control-label">Tên Người Dùng:</label>
+                        <input type="text" class="form-control" id="del_username" name="username" readonly>
+                    </div>
+
+                    <button type="button" onclick="handleDeleteUserAccount(); return false;"   class="btn btn-danger" data-dismiss="modal">Xóa</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
+<!-- ############################### END USER ACCOUNT SECTION ###############################-->
+
 
 <div id="dlgdeletebooth" class="modal fade" role="dialog">
     <div class="modal-dialog" style="padding-top: 10%;">
@@ -209,36 +270,6 @@
     </div>
 </div>
 
-<div id="dlgdeleteuser" class="modal fade" role="dialog">
-    <div class="modal-dialog" style="padding-top: 10%;">
-
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                        aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Xóa Người Dùng</h4>
-            </div>
-
-            <div class="modal-body">
-                <form method="POST">
-                    <div class="form-group">
-                        <label for="id" class="control-label">ID:</label>
-                        <input type="number" class="form-control" id="deluserid" readonly>
-                    </div>
-                    <div class="form-group">
-                        <label for="boothname" class="control-label">Tên Người Dùng:</label>
-                        <input type="text" class="form-control" id="delusername" readonly>
-                    </div>
-
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Xóa</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
-                </form>
-            </div>
-
-        </div>
-    </div>
-</div>
 
 <div id="dlginsertbooth" class="modal fade" role="dialog">
     <div class="modal-dialog" style="padding-top: 10%;">
