--- a/admin-page/views/common/dialogs.ejs
+++ b/admin-page/views/common/dialogs.ejs
@@ -201,7 +201,7 @@
 
                     </div>
 
-                    <button type="submit" onclick="handleUpdateUserAccount(); return false;" class="btn btn-info" data-dismiss="modal">Thêm</button>
+                    <button type="submit" onclick="handleUpdateUserAccount(); return false;" class="btn btn-info" data-dismiss="modal">Cập Nhật</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
                 </form>
             </div>
@@ -239,7 +239,8 @@
 <!-- ############################### END USER ACCOUNT SECTION ###############################-->
 
 
-<div id="dlgdeletebooth" class="modal fade" role="dialog">
+<!-- ############################### USER CATEGORY SECTION ###############################-->
+<div id="dlginsertcategory" class="modal fade" role="dialog">
     <div class="modal-dialog" style="padding-top: 10%;">
 
         <!-- Modal content-->
@@ -247,21 +248,17 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Xóa Gian Hàng / Sản Phẩm</h4>
+                <h4 class="modal-title">Thêm Loại Sản Phẩm Mới</h4>
             </div>
 
             <div class="modal-body">
-                <form action="#" method="POST">
+                <form action="#" method="POST" id="forminsertcategory">
                     <div class="form-group">
-                        <label for="id" class="control-label">ID:</label>
-                        <input type="number" class="form-control" id="boothid" readonly required>
-                    </div>
-                    <div class="form-group">
-                        <label for="boothname" class="control-label">Tên Gian Hàng / Sản Phẩm:</label>
-                        <input type="text" class="form-control" id="boothname" readonly>
+                        <label for="categoryName" class="control-label">Tên Loại Sản Phẩm:</label>
+                        <input type="text" class="form-control" id="categoryName" name="categoryName" required>
                     </div>
 
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Xóa</button>
+                    <button type="submit" onclick="handleInsertCategory(); $('#forminsertcategory').get(0).reset();  return false;" class="btn btn-info" data-dismiss="modal">Thêm</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
                 </form>
             </div>
@@ -270,8 +267,7 @@
     </div>
 </div>
 
-
-<div id="dlginsertbooth" class="modal fade" role="dialog">
+<div id="dlgupdatecategory" class="modal fade" role="dialog">
     <div class="modal-dialog" style="padding-top: 10%;">
 
         <!-- Modal content-->
@@ -279,21 +275,25 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Thêm Người Dùng</h4>
+                <h4 class="modal-title">Chỉnh Sửa Thông Tin Loại Sản Phẩm</h4>
             </div>
 
             <div class="modal-body">
-                <form action="#" method="POST">
+                <form action="#" method="POST" id="formupdatecategory">
                     <div class="form-group">
-                        <label for="id" class="control-label">ID:</label>
-                        <input type="number" class="form-control" value="4" readonly>
+                        <label for="categoryID" class="control-label">ID:</label>
+                        <input type="text" class="form-control" id="categoryID" name="categoryID" readonly required>
                     </div>
                     <div class="form-group">
-                        <label for="boothname" class="control-label">Tên Gian Hàng:</label>
-                        <input type="text" class="form-control">
+                        <label for="updcategoryName" class="control-label">Tên Loại Sản Phẩm:</label>
+                        <input type="text" class="form-control" id="updcategoryName" name="categoryName" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="totalProductType" class="control-label">Số Sản Phẩm Tương Ứng:</label>
+                        <input type="text" class="form-control" id="updtotalProductType" name="totalProductType" readonly required>
                     </div>
 
-                    <button type="button" class="btn btn-info" data-dismiss="modal">Thêm</button>
+                    <button type="submit" onclick="handleUpdateCategory(); return false;" class="btn btn-info" data-dismiss="modal">Cập Nhật</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
                 </form>
             </div>
@@ -301,6 +301,38 @@
         </div>
     </div>
 </div>
+
+<div id="dlgdeletecategory" class="modal fade" role="dialog">
+    <div class="modal-dialog" style="padding-top: 10%;">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Xóa Người Dùng</h4>
+            </div>
+
+            <div class="modal-body">
+                <form method="POST" action="#" id="formdeletecategory">
+                    <div class="form-group">
+                        <label for="delcategoryID" class="control-label">ID:</label>
+                        <input type="text" class="form-control" id="delcategoryID" name="categoryID" readonly required>
+                    </div>
+                    <div class="form-group">
+                        <label for="delcategoryName" class="control-label">Tên Loại Sản Phẩm:</label>
+                        <input type="text" class="form-control" id="delcategoryName" name="categoryName" readonly required>
+                    </div>
+
+                    <button type="button" onclick="handleDeleteCategory(); return false;"   class="btn btn-danger" data-dismiss="modal">Xóa</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
+<!-- ############################### END CATEGORY SECTION ###############################-->
 
 
 
