[admin-page] finish CRUD for product

--- a/admin-page/views/product/product.ejs
+++ b/admin-page/views/product/product.ejs
@@ -55,6 +55,7 @@
     </div>
     <%include ../common/dialogs%>
     <%include ../common/script%>
+    <%include ./productDialogs%>
 
     <script>
         $(function () {
