--- a/admin-page/views/promotion/promotion.ejs
+++ b/admin-page/views/promotion/promotion.ejs
@@ -51,6 +51,7 @@
 
     </div>
     <%include ../common/dialogs%>
+    <%include ./promotionDialogs%>
     <%include ../common/script%>
 
     <script>
