--- a/admin-page/views/category/category.ejs
+++ b/admin-page/views/category/category.ejs
@@ -47,6 +47,7 @@
 
     </div>
     <%include ../common/dialogs%>
+    <%include ./categoryDialogs%>
     <%include ../common/script%>
 
     <script>
