--- a/admin-page/views/common/header.ejs
+++ b/admin-page/views/common/header.ejs
@@ -41,7 +41,7 @@
               <li class="user-footer">
                 
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Đăng Xuất</a>
+                  <a href="/logout" class="btn btn-default btn-flat">Đăng Xuất</a>
                 </div>
               </li>
             </ul>
