--- a/admin-page/views/index.ejs
+++ b/admin-page/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><%= title %></title>
+    <title>Trang Admin SCTT-Shop</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/site.css">
 
@@ -22,18 +22,20 @@
 <body>
     <div class="container">
     <div class="col-md-4 col-md-offset-4" style="margin-top: 15%; background: #fff; padding: 20px;">
-        <form class="form-signin" action="/chart" method="POST">
+        <form class="form-signin" action="/login" method="POST">
             <h2 class="form-signin-heading">Trang Admin</h2>
             <div class="form-group">
                 <label for="username">Tên Đăng Nhập</label>
-                <input type="text" name="username" class="form-control" autofocus placeholder="Domain">
+                <input type="text" name="username" class="form-control" autofocus placeholder="Username">
              </div>
             <div class="form-group">
                 <label for="password">Mật Khẩu</label>
                 <input type="password" name="password" class="form-control" placeholder="Password">
             </div>
-            
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <%if (errorText != null && errorText != '') { %>
+                <span style="color:red"> <%= errorText %> </span>
+              <% } %>
+            <button style="margin-top:5px" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </form>
     
     </div>
