[admin-page] add signup & userdetail page

--- a/admin-page/views/common/sidebar.ejs
+++ b/admin-page/views/common/sidebar.ejs
@@ -28,6 +28,21 @@
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">BẢNG ĐIỀU KHIỂN</li>
 
+      <li>
+        <a href="/userdetail">
+          <i class="fa fa-user"></i> <span>Thông Tin Cá Nhân</span>
+        </a>
+        <!-- <ul class="treeview-menu">
+
+          <li>
+            <a href="/chart"><i class="fa fa-line-chart"></i> Doanh Thu
+              <span class="pull-right-container">
+              </span>
+            </a>
+          </li>
+        </ul> -->
+      </li>
+
       <li class="treeview">
         <a href="#">
           <i class="fa fa-pie-chart"></i> <span>Thống Kê</span>
