--- a/admin-page/views/index.ejs
+++ b/admin-page/views/index.ejs
@@ -14,43 +14,44 @@
     <script type="text/javascript" src="bootstrap-select/js/i18n/defaults-vi_VN.min.js"></script>
     <style>
         body {
-                background: #ddd;
+            background: #ddd;
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-    <div class="col-md-4 col-md-offset-4" style="margin-top: 15%; background: #fff; padding: 20px;">
-        <form class="form-signin" action="/login" method="POST">
-            <h2 class="form-signin-heading">Trang Admin</h2>
-            <div class="form-group">
-                <label for="username">Tên Đăng Nhập</label>
-                <input type="text" name="username" class="form-control" autofocus placeholder="Username">
-             </div>
-            <div class="form-group">
-                <label for="password">Mật Khẩu</label>
-                <input type="password" name="password" class="form-control" placeholder="Password">
-            </div>
-            <%if (errorText != null && errorText != '') { %>
+        <div class="col-md-4 col-md-offset-4" style="margin-top: 15%; background: #fff; padding: 20px;">
+            <form class="form-signin" action="/login" method="POST">
+                <h2 class="form-signin-heading">Trang Admin</h2>
+                <div class="form-group">
+                    <label for="username">Tên Đăng Nhập</label>
+                    <input type="text" name="username" class="form-control" autofocus placeholder="Username">
+                </div>
+                <div class="form-group">
+                    <label for="password">Mật Khẩu</label>
+                    <input type="password" name="password" class="form-control" placeholder="Password">
+                </div>
+                <%if (errorText != null && errorText != '') { %>
                 <span style="color:red"> <%= errorText %> </span>
-              <% } %>
-            <button style="margin-top:5px" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        </form>
-    
-    </div>
+                <% } %>
+                <button style="margin-top:5px" class="btn btn-lg btn-primary btn-block" type="submit">Đăng Nhập</button>
+            </form>
+
+            <div style="margin-top:10px; text-align: center">
+                <a href="/signup">Đăng Ký Tài Khoản</a>
+            </div>
+        </div>
     </div> <!-- /container -->
 
 </body>
 <script>
-
-        window.onload=function(){
-             $(function(){
-                 if(window.location.protocol==="https:")
-                     window.location.protocol="http";
-             });
-         }
-         
-        </script>
+    window.onload = function () {
+        $(function () {
+            if (window.location.protocol === "https:")
+                window.location.protocol = "http";
+        });
+    }
+</script>
 
 </html>
