--- a/admin-page/views/signupPage.ejs
+++ b/admin-page/views/signupPage.ejs
@@ -39,7 +39,7 @@
                         <div class="col-md-5 inputGroupContainer">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                <input name="username" placeholder="UserName" class="form-control" type="text">
+                                <input name="username" placeholder="UserName" class="form-control" type="text" required>
                             </div>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                         <div class="col-md-5 inputGroupContainer">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                <input name="fullName" placeholder="Full Name" class="form-control" type="text">
+                                <input name="fullName" placeholder="Full Name" class="form-control" type="text" required>
                             </div>
                         </div>
                     </div>
@@ -62,7 +62,7 @@
                         <div class="col-md-5 inputGroupContainer">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                                <input name="email" placeholder="E-Mail Address" class="form-control" type="text">
+                                <input name="email" placeholder="E-Mail Address" class="form-control" type="text" required>
                             </div>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                         <div class="col-md-5 inputGroupContainer">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-asterisk"></i></span>
-                                <input name="password" placeholder="Password" class="form-control" type="password">
+                                <input name="password" placeholder="Password" class="form-control" type="password" required>
                             </div>
                         </div>
                     </div>
@@ -86,8 +86,8 @@
                         <div class="col-md-5 inputGroupContainer">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-asterisk"></i></span>
-                                <input name="confirm_password" placeholder="Confirm Password" class="form-control"
-                                    type="password">
+                                <input name="repassword" placeholder="Confirm Password" class="form-control"
+                                    type="password" required>
                             </div>
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                             <div class="col-md-5 inputGroupContainer">
                                 <div class="input-group">
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                                    <input name="address" class="form-control" type="text">
+                                    <input name="address" class="form-control" type="text" required>
                                 </div>
                             </div>
                         </div>
@@ -111,7 +111,7 @@
                         <div class="col-md-5 inputGroupContainer">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-                                <input name="phoneNumber" class="form-control" type="text">
+                                <input name="phoneNumber" class="form-control" type="text" required>
                             </div>
                         </div>
                     </div>
