--- a/admin-page/views/common/sidebar.ejs
+++ b/admin-page/views/common/sidebar.ejs
@@ -5,10 +5,10 @@
     <!-- Sidebar user panel -->
     <div class="user-panel">
       <div class="pull-left image">
-        <img src="dist/img/admin_160x160.jpg" class="img-circle" alt="User Image">
+        <img src="<%= user.avatar %>" class="img-circle" alt="User Image">
       </div>
       <div class="pull-left info">
-        <p>Admin</p>
+        <p><%= user.fullName %></p>
         <a href="#"><i class="fa fa-circle text-success"></i> Đang Hoạt Động</a>
       </div>
     </div>
